--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <h1>Oops, this page is still under maintence. Please check back later - Develovo Team.</h1>
+<a href="mailto:contact@develovo.net">Contact Us</a>
