--- a/index.html
+++ b/index.html
@@ -1,2 +1,123 @@
-<h1>Oops, this page is still under maintence. Please check back later - Develovo Team.</h1>
-<a href="mailto:contact@develovo.net">Contact Us</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home | Develovo Consulting</title>
+    <link rel="stylesheet" href="./index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
+</head>
+
+<script>
+    //alert("Site is currently a WIP");
+</script>
+
+<body>
+    
+<header class="fade-in">
+    <div class="header-logo">
+        <img src="./transparent.png" alt="Develovo" />
+    </div>
+
+    <div class="header-links">
+        <ul>
+            <li> <a href="/home">Home</a> </li>
+            <li> <a href="/home">Services</a> </li>
+            <li> <a href="/home">Work</a> </li>
+            <li> <a href="/home">Insights</a> </li>
+            <li> <a href="/home">Contact</a> </li>
+        </ul>
+    </div>
+
+    <div class="header-button">
+        <a href="/quote">
+            <button id="top-button">GET A QUOTE</button>
+        </a>
+    </div>
+
+</header>
+
+<div class="hero fade-in">
+
+    <div class="hero-text">
+        <h1>Innovative Tech Solutions from Develovo</h1>
+        <p>Consulting Firm Delivering Tech Innovation - Website is a current WIP</p>
+        <a href="/work">
+            <button id="top-button">VIEW PORTFOLIO</button>
+        </a>
+    </div>
+
+    <div class="hero-images">
+        <img src="./placeholder.png" class="front floating" />
+        <img src="./placeholder.png" class="back floating" />
+    </div>
+
+</div>
+
+    <!--Waves Container-->
+    <div style="display:flex;position: relative;width:100vw;padding:0;z-index: -1;" class="fade-in">
+        <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+        viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+        <defs>
+        <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+        </defs>
+        <g class="parallax">
+        <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+        <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+        <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+        <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+        </g>
+        </svg>
+</div>
+        <!--Waves end-->
+
+<div class="general-service slide-up">
+    <h2>Services Offered</h2>
+    <p>Explore our key services that drive innovation and excellence in tech solutions.</p>
+    <div class="services">
+
+        <div class="section">
+            <img src="" alt="">
+            <h3></h3>
+            <p></p>
+        </div>
+
+        <div class="section">
+            <img src="" alt="">
+            <h3></h3>
+            <p></p>
+        </div>
+
+        <div class="section">
+            <img src="" alt="">
+            <h3></h3>
+            <p></p>
+        </div>
+
+    </div>
+</div>
+
+<div class="client-testimonials">
+    <h2>Client Testimonials</h2>
+    <div class="testimonal-boxes">
+        <div class="box">
+            <p></p>
+            <div class="client">
+                <img src="" alt="">
+                <div class="info">
+                    <h3>Name</h3>
+                    <p>Position</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+</body>
+
+<footer>
+
+</footer>
+
+</html>
